# PatternsCollection

./: .gitignore  CMakeLists.txt  README.md
.githooks/: pre-commit
.github/workflows/: main.yml  python.yml
.hooks/: pre-commit
AbstractFactory/cpp-source/: CMakeLists.txt  main.cpp  main_serializer.cpp
AbstractFactory/cpp-source/factories/: BasementFactory.cpp  BasementFactory.h  CMakeLists.txt  CavesFactory.cpp  CavesFactory.h  RoomFactory.cpp  RoomFactory.h
AbstractFactory/cpp-source/rooms/: BasementHardRoom.cpp  BasementHardRoom.h  BasementNormalRoom.cpp  BasementNormalRoom.h  CMakeLists.txt  CavesHardRoom.cpp  CavesHardRoom.h  CavesNormalRoom.cpp  CavesNormalRoom.h  HardRoom.cpp  HardRoom.h  NormalRoom.cpp  NormalRoom.h  Room.cpp  Room.h
AbstractFactory/cpp-source/serializers/: CMakeLists.txt  GameSerializer.cpp  GameSerializer.h  RoomSerializer.cpp  RoomSerializer.h
AbstractFactory/python-code/: main.py
AbstractFactory/python-code/factories/: CavesFactory.py  RoomFactory.py
AbstractFactory/python-code/rooms/: BasementNormalRoom.py  CavesNormalRoom.py  HardRoom.py  NormalRoom.py  Room.py
AbstractFactory/python-source/: main.py
AbstractFactory/python-source/factories/: BasementFactory.py  CavesFactory.py  RoomFactory.py
AbstractFactory/python-source/rooms/: BasementHardRoom.py  BasementNormalRoom.py  CavesHardRoom.py  CavesNormalRoom.py  HardRoom.py  NormalRoom.py  Room.py
Adapter/cpp-source/: CMakeLists.txt  JsonStorage.cpp  JsonStorage.h  README.md  TextJsonAdapter.cpp  TextJsonAdapter.h  TextStorage.cpp  TextStorage.h  main.cpp
Adapter/cpp-source/data/: input.txt
Adapter/python-source/: JsonStorage.py  TextJsonAdapter.py  TextStorage.py  main.py
Adapter/python-source/data/: input.json
Bridge/cpp-source/: CMakeLists.txt  main.cpp
Bridge/cpp-source/axles/: Axle.cpp  CarAxle.cpp  PlaneAxle.cpp
Bridge/cpp-source/include/: Axle.h  CarAxle.h  Gamepad.h  PlaneAxle.h  PlaneWheel.h  SteeringWheel.h
Bridge/cpp-source/wheels/: Gamepad.cpp  PlaneWheel.cpp  SteeringWheel.cpp
Builder/cpp-source/: CMakeLists.txt  Chef.cpp  Chef.h  main.cpp
Builder/cpp-source/builders/: BurgerBuilder.cpp  BurgerBuilder.h  HamburgerBuilder.cpp  HamburgerBuilder.h  VegiburgerBuilder.cpp  VegiburgerBuilder.h
Builder/cpp-source/builders/base/: Burger.cpp  Burger.h
Builder/python-source/: Chef.py  main.py
Builder/python-source/base/: Burger.py
Builder/python-source/builders/: BurgerBuilder.py  HamburgerBuilder.py  VegiburgerBuilder.py
ChainResponsibility/cpp-source/: BaseHandler.cpp  BaseHandler.h  CMakeLists.txt  DivisionZeroHandler.cpp  DivisionZeroHandler.h  FileHandler.cpp  FileHandler.h  LogLevel.cpp  LogLevel.h  LoggingHandler.cpp  LoggingHandler.h  StderrHandler.cpp  StderrHandler.h  main.cpp
Command/cpp-source/: CMakeLists.txt  Dish.h  Waiter.cpp  Waiter.h  main.cpp
Command/cpp-source/commands/: Command.cpp  Command.h  CreateCocktailCommand.cpp  CreateCocktailCommand.h  CreateSoupCommand.cpp  CreateSoupCommand.h
Command/cpp-source/cookery/: Barman.cpp  Barman.h  Cook.cpp  Cook.h  CookPool.cpp  CookPool.h
Composite/cpp-source/: CMakeLists.txt  main.cpp
Composite/cpp-source/include/: Breakfast.h  Dish.h  DishComponent.h  Milk.h
Composite/cpp-source/ration/: Breakfast.cpp  Dish.cpp  DishComponent.cpp  Milk.cpp
Decorator/cpp-source/: CMakeLists.txt  main.cpp
Decorator/cpp-source/configs/: config.ini.example
Decorator/cpp-source/include/: DecoratorNotifier.h  EmailNotifier.h  LogNotifier.h  Notifier.h  TgNotifier.h
Decorator/cpp-source/notifiers/: DecoratorNotifier.cpp  EmailNotifier.cpp  LogNotifier.cpp  Notifier.cpp  TgNotifier.cpp
Facade/cpp-source/: CMakeLists.txt  main.cpp
Facade/cpp-source/facades/: BurgerFacade.cpp  BurgerFacade.h  Facade.cpp  Facade.h  IsaacFacade.cpp  IsaacFacade.h
FactoryMethod/cpp-source/: CMakeLists.txt  main.cpp
FactoryMethod/cpp-source/routers/: Hub.cpp  Hub.h  Router.cpp  Router.h  WifiRouter.cpp  WifiRouter.h
FactoryMethod/cpp-source/routes/: EthernetRoute.cpp  EthernetRoute.h  Route.cpp  Route.h  WifiRoute.cpp  WifiRoute.h
FactoryMethod/python-source/: main.py
FactoryMethod/python-source/routers/: FourRouter.py  Hub.py  Router.py  ThreeRouter.py  WiFiRouter.py  __init__.py
FactoryMethod/python-source/routes/: EthernetRoute.py  FourRoute.py  Route.py  ThreeRoute.py  WiFiRoute.py  __init__.py
JavaSource/: .gitignore  pom.xml
JavaSource/src/main/resources/adapter/: input.json  input.yaml
Mediator/cpp-source/: CMakeLists.txt  main.cpp
Mediator/cpp-source/dispatcher/: Dispatcher.cpp  Dispatcher.h  PlaneDispatcher.cpp  PlaneDispatcher.h
Mediator/cpp-source/vehicles/: Plane.cpp  Plane.h  PlaneCommands.h  Vehicle.cpp  Vehicle.h
Memento/cpp-source/: CMakeLists.txt  Caretaker.cpp  Caretaker.h  Memento.cpp  Memento.h  Originator.cpp  Originator.h  PasswordMemento.cpp  PasswordMemento.h  main.cpp
Observer/cpp-source/: CMakeLists.txt  main.cpp
Prototype/cpp-source/: CMakeLists.txt  FerrariPrototype.cpp  FerrariPrototype.h  PirelliFerrari.cpp  PirelliFerrari.h  Prototype.cpp  Prototype.h  main.cpp
Prototype/python-source/: FerrariPrototype.py  PirelliFerrari.py  Prototype.py  main.py
State/cpp-source/: CMakeLists.txt  TrafficLight.cpp  TrafficLight.h  main.cpp
State/cpp-source/states/: Green.cpp  Green.h  Red.cpp  Red.h  State.cpp  State.h  Yellow.cpp  Yellow.h
Strategy/cpp-source/: CMakeLists.txt  Duck.cpp  Duck.h  DuckHuntFlyBehaviour.cpp  DuckHuntFlyBehaviour.h  FlyBehaviour.cpp  FlyBehaviour.h  QuackBehaviour.cpp  QuackBehaviour.h  SimpleFlyBehaviour.cpp  SimpleFlyBehaviour.h  SimpleQuackBehaviour.cpp  SimpleQuackBehaviour.h  SimpleSwimBehaviour.cpp  SimpleSwimBehaviour.h  SwimBehaviour.cpp  SwimBehaviour.h  main.cpp
Visitor/cpp-source/: CMakeLists.txt  main.cpp
Visitor/cpp-source/rooms/: BathRoom.cpp  BathRoom.h  ElementRoom.cpp  ElementRoom.h  Home.cpp  Home.h  Kitchen.cpp  Kitchen.h  LivingRoom.cpp  LivingRoom.h
Visitor/cpp-source/workers/: Painter.cpp  Painter.h  SanTech.cpp  SanTech.h  Tiler.cpp  Tiler.h  Visitor.cpp  Visitor.h  Windower.cpp  Windower.h
(+35 files in other folders)
